--- a/netZooWeb/layouts/partials/menu-footer.html
+++ b/netZooWeb/layouts/partials/menu-footer.html
@@ -1,1 +1,50 @@
+<font size="3"> netZooR</font>
+<div align="left">
+    <!-- Place this tag where you want the button to render. -->
+    <!--- <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download matcornic/hugo-theme-learn on GitHub">Download</a> -->
 
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooR" data-icon="octicon-star" data-show-count="true" aria-label="Star netZoo/netZooR on GitHub">Star</a>
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooR/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork netZoo/netZooR on GitHub">Fork</a>
+    <!-- <p>Built with <a href="https://github.com/netZoo/netZooR"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p> -->
+</div>
+<font size="3">netZooPy</font>
+<div align="left">
+    <!-- Place this tag where you want the button to render. -->
+    <!--- <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download matcornic/hugo-theme-learn on GitHub">Download</a> -->
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooPy" data-icon="octicon-star" data-show-count="true" aria-label="Star netZoo/netZooPy on GitHub">Star</a>
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooPy/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork netZoo/netZooPy on GitHub">Fork</a>
+    <!-- <p>Built with <a href="https://github.com/netZoo/netZooR"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p> -->
+</div>
+<font size="3">netZooM</font>
+<div align="left">
+    <!-- Place this tag where you want the button to render. -->
+    <!--- <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download matcornic/hugo-theme-learn on GitHub">Download</a> -->
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooM" data-icon="octicon-star" data-show-count="true" aria-label="Star netZoo/netZooM on GitHub">Star</a>
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooM/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork netZoo/netZooM on GitHub">Fork</a>
+    <!-- <p>Built with <a href="https://github.com/netZoo/netZooR"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p> -->
+</div>
+<font size="3">netZooC</font>
+<div align="left">
+    <!-- Place this tag where you want the button to render. -->
+    <!--- <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download matcornic/hugo-theme-learn on GitHub">Download</a> -->
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooC" data-icon="octicon-star" data-show-count="true" aria-label="Star netZoo/netZooC on GitHub">Star</a>
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/netZoo/netZooC/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork netZoo/netZooC on GitHub">Fork</a>
+    <!-- <p>Built with <a href="https://github.com/netZoo/netZooR"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p> -->
+</div>
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
